# svd2cpp

./: .gitignore  CMakeLists.txt  README.md  Taskfile.yml  conanfile.py
cmake/: ProjectSettings.cmake  ProjectVersion.cmake
profiles/: gcc10_x64
src/: Builders.cpp  Builders.hpp  CMakeLists.txt  ClassBuilder.cpp  ClassBuilder.hpp  IBuilder.hpp  ItemPrinter.hpp  Peripheral.hpp  XmlParser.cpp  XmlParser.hpp  builder.cpp  builder.h  class_builder.cpp  class_builder.h  device_info.h  item_printer.h  logging.cpp  logging.h  main.cpp  peripheral.h  types.h  version.h  xml_parser.cpp  xml_parser.h
